Apply translation memory

--- a/l10n/po/ja_JP/_versions/2.2/guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/dev-mode-differences.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/dev-mode-differences.adoc:6
 #, no-wrap
 msgid "How dev-mode differs from a production application"
-msgstr ""
+msgstr "dev-modeと本番アプリケーションの差異"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/dev-mode-differences.adoc:11
