--- a/l10n/po/ja_JP/_versions/main/guides/dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-services.adoc.po
@@ -59,7 +59,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:32
 msgid "The AMQP Dev Service will be enabled when the `quarkus-smallrye-reactive-messaging-amqp` extension is present in your application, and the broker address has not been explicitly configured. More information can be found at the xref:amqp-dev-services.adoc[AMQP Dev Services Guide]."
-msgstr ""
+msgstr "AMQP Dev Serviceは、アプリケーションに `quarkus-smallrye-reactive-messaging-amqp` エクステンションが存在し、ブローカー・アドレスが明示的に構成されていない場合に有効になります。詳細は、link:amqp-dev-services.html[AMQP Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:35
@@ -70,7 +70,7 @@ msgstr "Apicurio Registry"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:40
 msgid "The Apicurio Dev Service will be enabled when the `quarkus-apicurio-registry-avro` extension is present in your application, and it's address has not been explicitly configured. More information can be found at the xref:apicurio-registry-dev-services.adoc[Apicurio Registry Dev Services Guide]."
-msgstr ""
+msgstr "Apicurio Dev Serviceは、アプリケーションに `quarkus-apicurio-registry-avro` エクステンションが存在し、そのアドレスが明示的に設定されていない場合に有効になります。詳細は、 link:apicurio-registry-dev-services.html[Apicurio Registry Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:43
@@ -81,7 +81,7 @@ msgstr "データベース"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:48
 msgid "The database Dev Services will be enabled when a reactive or JDBC datasource extension is present in the application, and the database URL has not been configured. More information can be found at the xref:datasource.adoc#dev-services[Datasource Guide]."
-msgstr ""
+msgstr "データベース Dev Services は、アプリケーションにリアクティブ・データソースまたは JDBC データソース拡張が存在し、データベースの URL が構成されていない場合に有効になります。詳細については、 link:datasource.html#dev-services[データソース・ガイド]を参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:51
@@ -108,7 +108,7 @@ msgstr "Kafka"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:66
 msgid "The Kafka Dev Service will be enabled when the `quarkus-kafka-client` extension is present in your application, and the broker address has not been explicitly configured. More information can be found at the xref:kafka-dev-services.adoc[Kafka Dev Services Guide]."
-msgstr ""
+msgstr "Kafka Dev Serviceは、アプリケーションに `quarkus-kafka-client` エクステンションが存在し、ブローカー・アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:kafka-dev-services.html[Kafka Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:69
@@ -119,7 +119,7 @@ msgstr "Keycloak"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:74
 msgid "The Keycloak Dev Service will be enabled when the `quarkus-oidc` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the xref:security-openid-connect-dev-services.adoc[OIDC Dev Services Guide]."
-msgstr ""
+msgstr "Keycloak Dev Serviceは、アプリケーションに `quarkus-oidc` エクステンションが存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は， link:security-openid-connect-dev-services.html[OIDC Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:78
@@ -130,7 +130,7 @@ msgstr "Kogito"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:81
 msgid "The Kogito Dev Service will be enabled when either `kogito-quarkus` or `kogito-quarkus-processes` extension is present in your application. More information can be found at the xref:kogito-dev-services.adoc[Kogito Dev Services Guide]."
-msgstr ""
+msgstr "アプリケーションに `kogito-quarkus` または `kogito-quarkus-processes` のいずれかのエクステンションがある場合、Kogito Dev Service が有効になります。詳細は、 link:kogito-dev-services.html[Kogito Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:84
@@ -141,7 +141,7 @@ msgstr "MongoDB"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:89
 msgid "The MongoDB Dev Service will be enabled when the `quarkus-mongodb-client` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the xref:mongodb.adoc#dev-services[MongoDB Guide]."
-msgstr ""
+msgstr "MongoDB Dev Serviceが有効になるのは、アプリケーションに `quarkus-mongodb-client` エクステンションがあり、サーバーアドレスが明示的に設定されていない場合です。詳細は link:mongodb.html#dev-services[MongoDB ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:92
@@ -152,7 +152,7 @@ msgstr "RabbitMQ"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:97
 msgid "The RabbitMQ Dev Service will be enabled when the `quarkus-smallrye-reactive-messaging-rabbitmq` extension is present in your application, and the broker address has not been explicitly configured. More information can be found at the xref:rabbitmq-dev-services.adoc[RabbitMQ Dev Services Guide]."
-msgstr ""
+msgstr "RabbitMQ Dev Serviceは、アプリケーションに `quarkus-smallrye-reactive-messaging-rabbitmq` エクステンションが存在し、ブローカーアドレスが明示的に構成されていない場合に有効になります。詳細については、 link:rabbitmq-dev-services.html[RabbitMQ Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:100
@@ -163,7 +163,7 @@ msgstr "Redis"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:105
 msgid "The Redis Dev Service will be enabled when the `quarkus-redis-client` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the xref:redis-dev-services.adoc[Redis Dev Services Guide]."
-msgstr ""
+msgstr "Redis Dev Serviceは、アプリケーションに `quarkus-redis-client` エクステンションが存在し、サーバー・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:redis-dev-services.html[Redis Dev Services Guide]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:108
@@ -174,7 +174,7 @@ msgstr "Vault"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:113
 msgid "The Vault Dev Service will be enabled when the `quarkus-vault` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the link:{vault-guide}#dev-services[Vault Guide]."
-msgstr ""
+msgstr "Vault Dev Service は、アプリケーションに `quarkus-vault` エクステンションが存在し、サーバー アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:{vault-guide}#dev-services[Vaultガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:114
@@ -185,7 +185,7 @@ msgstr "Neo4j"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:119
 msgid "The Neo4j Dev Service will be enabled when the `quarkus-neo4j` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the link:{neo4j-guide}#dev-services[Neo4j Guide]."
-msgstr ""
+msgstr "Neo4j Dev Serviceは、アプリケーションに `quarkus-neo4j` エクステンションが存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:{neo4j-guide}#dev-services[Neo4jガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:120
@@ -196,7 +196,7 @@ msgstr "Infinispan"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:125
 msgid "The Infinispan Dev Service will be enabled when the `quarkus-infinispan-client` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the xref:infinispan-client.adoc#dev-services[Infinispan Guide]."
-msgstr ""
+msgstr "Infinispan Dev Serviceは、アプリケーションに `quarkus-infinispan-client` エクステンションが存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は link:infinispan-client.html#dev-services[Infinispanガイド]に記載されています。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-services.adoc:128
@@ -207,4 +207,4 @@ msgstr "Elasticsearch"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:133
 msgid "The Elasticsearch Dev Service will be enabled when one of the Elasticsearch based extensions (Elasticsearch client or Hibernate Search ORM Elasticsearch)  is present in your application, and the server address has not been explicitly configured.  More information can be found at the xref:elasticsearch-dev-services.adoc[Elasticsearch Dev Services Guide]."
-msgstr ""
+msgstr "Redis Dev Serviceは、アプリケーションに `quarkus-redis-client` エクステンションが存在し、サーバー・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:redis-dev-services.html[Redis Dev Services Guide]をご覧ください。"
