--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache.adoc.po
@@ -166,7 +166,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:75
 msgid "In your build file, add the following dependencies:"
-msgstr ""
+msgstr "以下をビルドファイルに追加してください:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:77
