--- a/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
@@ -39,7 +39,7 @@ msgstr "イントロ"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:16
 msgid "Quarkus provides a dev-mode (explained in more detail xref:maven-tooling.adoc#dev-mode[here] and link:gradle-tooling#dev-mode[here]) which greatly aids during development but should *NEVER* be used in production."
-msgstr ""
+msgstr "Quarkusには開発モード（詳細は link:maven-tooling.html#dev-mode[こちら]と link:gradle-tooling#dev-mode[こちら]）があり、開発に大いに役立ちます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:18
@@ -55,7 +55,7 @@ msgstr "機能セットはさておき、dev-modeで実行されるQuarkusアプ
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:24
 msgid "In dev-mode, Quarkus uses a ClassLoader hierarchy (explained in detail xref:class-loading-reference.adoc[here]) that enables the live reload of user code without requiring a rebuild and restart of the application."
-msgstr ""
+msgstr "開発モードでは、QuarkusはClassLoader階層（詳細は link:class-loading-reference.html[こちら]）を使用し、アプリケーションの再ビルドや再起動を必要とせずにユーザーコードのライブリロードを可能にしています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:26
@@ -93,7 +93,7 @@ msgstr "Dev UI"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:40
 msgid "Quarkus provides a very useful xref:dev-ui.adoc[UI] accessible from the browser at `/q/dev`. This UI allows a developer to see the state of the application, but also provides access to various actions that can change that state (depending on the extensions that are present).  Examples of such operations are:"
-msgstr ""
+msgstr "Quarkusは、 `/q/dev` でブラウザからアクセスできる非常に便利な link:dev-ui.html[UI]を提供しています 。このUIにより、開発者はアプリケーションの状態を確認できるだけでなく、（存在するエクステンションに応じて）その状態を変更できる様々な操作にアクセスできます。そのような操作の例は以下の通りです:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:42
@@ -140,7 +140,7 @@ msgstr "データベースインポートスクリプト"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:54
 msgid "The `quarkus-hibernate-orm` extension will run the `import.sql` script in `src/main/resources` when Quarkus is running in dev-mode. More details can be found xref:hibernate-orm.adoc#dev-mode[here]."
-msgstr ""
+msgstr "`quarkus-hibernate-orm` エクステンションは、Quarkusがdev-modeで動作しているときに、 `import.sql` スクリプトを `src/main/resources` で実行します。詳細は link:hibernate-orm.html#dev-mode[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:55
@@ -151,7 +151,7 @@ msgstr "Dev Services"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:59
 msgid "When testing or running in dev-mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as Dev Services.  More information can be found xref:datasource.adoc#dev-services[here]."
-msgstr ""
+msgstr "開発モードでテストまたは実行する場合、Quarkusはゼロコンフィグのデータベースをすぐに提供することができますが、これはDev Servicesと呼ばれる機能です。詳細については、 link:datasource.html#dev-services[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:60
@@ -162,7 +162,7 @@ msgstr "Swagger UI"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:63
 msgid "The `quarkus-smallrye-openapi` extension will expose the Swagger UI when Quarkus is running in dev-mode. Additional information can be found xref:openapi-swaggerui.adoc#dev-mode[here]."
-msgstr ""
+msgstr "`quarkus-smallrye-openapi` エクステンションは、Quarkusがdev-modeで動作しているときに、Swagger UIを公開します。追加情報は link:openapi-swaggerui.html#dev-mode[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:64
@@ -173,7 +173,7 @@ msgstr "GraphQL UI"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:67
 msgid "The `quarkus-smallrye-graphql` extension will expose the GraphiQL UI when Quarkus is running in dev-mode. More details can be found xref:smallrye-graphql.adoc#ui[here]."
-msgstr ""
+msgstr "`quarkus-smallrye-graphql` エクステンションは、Quarkusがdev-modeで動作しているときにGraphiQL UIを公開します。詳細は link:smallrye-graphql.html#ui[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:68
@@ -184,7 +184,7 @@ msgstr "Health UI"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:71
 msgid "The `quarkus-smallrye-health` extension will expose the Health UI when Quarkus is running in dev-mode. xref:smallrye-health.adoc#ui[This] section provides additional information."
-msgstr ""
+msgstr "`quarkus-smallrye-health` エクステンションは、Quarkusがdev-modeで動作しているときにHealth UIを公開します。 link:smallrye-health.html#ui[この]セクションでは、追加情報を提供します。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:72
@@ -195,7 +195,7 @@ msgstr "Mock mailer"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:75
 msgid "The `quarkus-mailer` extension will enable an in-memory mock mail server when Quarkus is running in dev-mode. See xref:mailer-reference.adoc#testing[this] for more details."
-msgstr ""
+msgstr "`quarkus-mailer` エクステンションは、Quarkusがdev-modeで動作しているときに、インメモリのモックメールサーバを有効にします。詳しくは link:mailer-reference.html#testing[こちら]をご覧ください。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:77
@@ -238,7 +238,7 @@ msgstr "開発モードでは、アプリケーションの実行時フットプ
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:98
 msgid "In contrast, in a production application the main objective for Quarkus is to consume the least amount of memory and startup in the smallest amount of time.  Thus, when running the production application, build time operations are not performed (by definition) and various infrastructure classes needed at build time are not present at all at runtime.  Furthermore, the purpose built ClassLoader that comes with the xref:maven-tooling.adoc#fast-jar[fast-jar] package type ensures that class lookup is done as fast as possible while also keeping the minimum amount of jars in memory."
-msgstr ""
+msgstr "対照的に、プロダクションアプリケーションでは、Quarkusの主な目的は、最小のメモリを消費し、最小の時間で起動することです。したがって、本番アプリケーションを実行する際には、ビルド時の操作は（定義上）実行されず、ビルド時に必要なさまざまなインフラストラクチャクラスは、実行時にはまったく存在しません。さらに、 link:maven-tooling.html#fast-jar[fast-jar]パッケージタイプに付属する目的に応じて構築されたClassLoaderにより、クラスの検索が可能な限り高速に行われると同時に、メモリ内のjarの量も最小限に抑えられます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:99
@@ -260,7 +260,7 @@ msgstr "ネイティブ実行可能ファイル"
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:106
 msgid "When a native executable is created (explained in detail xref:building-native-image.adoc[here]), it is *always* built from a production application."
-msgstr ""
+msgstr "ネイティブ実行可能ファイルを作成する場合（詳しくは link:building-native-image.html[こちら]）、 *常に* 本番アプリケーションからビルドされます。"
 
 #~ msgid "Native binary"
 #~ msgstr "ネイティブバイナリ"
