--- a/l10n/po/ja_JP/_versions/main/guides/opentelemetry.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/opentelemetry.adoc.po
@@ -393,7 +393,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/opentelemetry.adoc:210
 msgid "The https://github.com/open-telemetry/opentelemetry-java-instrumentation/tree/main/instrumentation/jdbc/library[JDBC instrumentation] will add a span for each JDBC queries done by your application, to enable it, add the following dependency to your build file:"
-msgstr ""
+msgstr "link:https://github.com/open-telemetry/opentelemetry-java-instrumentation/tree/main/instrumentation/jdbc/library[JDBCインスツルメンテーション]は、アプリケーションによって実行される各JDBCクエリのためにスパンを追加します。これを有効にするには、次の依存関係をビルドファイルに追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/opentelemetry.adoc:218
@@ -414,7 +414,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/opentelemetry.adoc:227
 msgid "As it uses a dedicated JDBC driver, you must configure your datasource and Hibernate ORM to use it."
-msgstr ""
+msgstr "専用のJDBCドライバを使用するため、データソースとHibernate ORMがそれを使用するように設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/opentelemetry.adoc:237
@@ -649,12 +649,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/opentelemetry.adoc:377
 msgid "Annotating a method in any CDI aware bean with the `io.opentelemetry.extension.annotations.WithSpan` annotation will create a new Span and establish any required relationships with the current Trace context."
-msgstr ""
+msgstr "CDI を意識した Bean のメソッドに `io.opentelemetry.extension.annotations.WithSpan` というアノテーションを付けると、新しい Span が作成され、現在の Trace コンテキストと必要な関係が確立されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/opentelemetry.adoc:380
 msgid "Method parameters can be annotated with the `io.opentelemetry.extension.annotations.SpanAttribute` annotation to indicate which method parameters should be part of the Trace."
-msgstr ""
+msgstr "メソッドパラメータには、 `io.opentelemetry.extension.annotations.SpanAttribute` アノテーションを付けて、どのメソッドパラメータが Trace の一部となるべきかを示すことができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/opentelemetry.adoc:382
