--- a/l10n/po/ja_JP/_versions/main/guides/redis-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/redis-reference.adoc.po
@@ -34,22 +34,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:17
 msgid "As the list of commands which are supported out-of-box by both https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`] and https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`] depends on what is available in https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`], then there might be case when you need a command which is not (yet) available via https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]と  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`]の両方でサポートされているコマンドのリストは link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]で利用可能なものに依存するため、場合によっては link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`] で利用できないコマンドが必要になる場合があります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:20
 msgid "In such case (if you don't want to wait for the new command to be supported in https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]), you can implement it in either https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`] or https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`].  In order to do so, you will need:"
-msgstr ""
+msgstr "このような場合（新しいコマンドが link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]でサポートされるのを待ちたくない場合）は、 link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]または link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`] のいずれかで実装できます。 そのためには、以下のものが必要となります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:22
 msgid "Generate a new `Command` based on the nodejs code available in https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`] repository:"
-msgstr ""
+msgstr "link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]リポジトリで公開されているnodejsのコードに基づいて、新しい `Command` を生成"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:24
 msgid "If you don't have a Redis service running locally, you can run Redis in a Docker container:"
-msgstr ""
+msgstr "Redisのサービスをローカルで実行していない場合は、DockerコンテナでRedisを実行することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/redis-reference.adoc:27
@@ -60,7 +60,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:30
 msgid "Next, while being in https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`] root folder execute:"
-msgstr ""
+msgstr "次に、link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`] ルートフォルダにいる状態で 次を実行します:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/redis-reference.adoc:36
@@ -74,7 +74,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:39
 msgid "The above sequence of commands should update the https://github.com/vert-x3/vertx-redis-client/blob/master/src/main/java/io/vertx/redis/client/Command.java[`Command.java`] file, so it includes all the possible commands supported by a particular Redis version."
-msgstr ""
+msgstr "上記の一連のコマンドは、link:https://github.com/vert-x3/vertx-redis-client/blob/master/src/main/java/io/vertx/redis/client/Command.java[`Command.java`]ファイルを更新し、特定のRedisバージョンでサポートされるすべてのコマンドが含まれるようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/redis-reference.adoc:43
@@ -85,12 +85,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:47
 msgid "This definition is very important as we will have to use it in the service.  Once we have this `Command` we can start to update the redis-client extension by:"
-msgstr ""
+msgstr "この定義は、サービスの中で使用する必要があるため、非常に重要です。この `Command` ができたら、redis-client extension を以下のように更新していきます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:49
 msgid "Updating the https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`] interface, i.e.:"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]インターフェイスを更新、つまり"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/redis-reference.adoc:53
@@ -101,7 +101,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:56
 msgid "Updating the https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/RedisClientImpl.java[`RedisClientImpl`], i.e.:"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/RedisClientImpl.java[`RedisClientImpl`]を更新、すなわち"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/redis-reference.adoc:66
@@ -127,7 +127,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:72
 msgid "Updating the https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`] interface, i.e.:"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`]インターフェイスを更新、つまり"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/redis-reference.adoc:76
@@ -144,7 +144,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:81
 msgid "Updating the https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/ReactiveRedisClientImpl.java[`ReactiveRedisClientImpl`], i.e.:"
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/ReactiveRedisClientImpl.java[`ReactiveRedisClientImpl`]を更新、すなわち"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/redis-reference.adoc:91
@@ -180,4 +180,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/redis-reference.adoc:101
 msgid "Please note that it's using the `MutinyRedis` class which does asynchronous calls to Redis."
-msgstr ""
+msgstr "Redisへの非同期呼び出しを行う `MutinyRedis` クラスを使用していることに注目してください。"
