Add machine translation

--- a/l10n/po/ja_JP/_includes/header-navigation.html.po
+++ b/l10n/po/ja_JP/_includes/header-navigation.html.po
@@ -100,7 +100,6 @@ msgstr "<a href=\"{{site.baseurl}}/books\" class=\"{% if page.url contains '/boo
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:35
 #, fuzzy
-#| msgid "<span href=\"{{site.baseurl}}/learn/\">Community <i class=\"fas fa-chevron-down\"></i></span>"
 msgid "<span href=\"{{site.baseurl}}/community/\">Community <i class=\"fas fa-chevron-down\"></i></span>"
 msgstr "<span href=\"{{site.baseurl}}/learn/\">コミュニティ<i class=\"fas fa-chevron-down\"></i></span>"
 
@@ -152,23 +151,23 @@ msgstr "<a href=\"https://code.quarkus.io\" class=\"button-cta secondary white\"
 #. type: Content of: <div><div><div><nav><div><ul><li><span>
 #: upstream/_includes/header-navigation.html:51
 #, fuzzy
-#| msgid "<a href=\"{{site.baseurl}}/\">"
 msgid "<span href=\"{{site.baseurl}}/language/\">"
 msgstr "<a href=\"{{site.baseurl}}/\">"
 
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:51
 #, fuzzy
-#| msgid "<span href=\"{{site.baseurl}}/about/\">About <i class=\"fas fa-chevron-down\"></i></span>"
 msgid "<i class=\"fas fa-chevron-down\"></i></span>"
 msgstr "<span href=\"{{site.baseurl}}/about/\">Quarkusとは <i class=\"fas fa-chevron-down\"></i></span>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:53
+#, fuzzy
 msgid "<a href=\"https://quarkus.io/\" >ENGLISH</a>"
-msgstr ""
+msgstr "<a href=\"https://quarkus.io/\" >ENGLISH</a>."
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:54
+#, fuzzy
 msgid "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>"
-msgstr ""
+msgstr "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>。"
