Add some translations

--- a/l10n/po/ja_JP/_guides/grpc.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: 2021-03-06 23:20+0900\n"
+"PO-Revision-Date: 2022-05-07 23:56+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -68,21 +68,18 @@ msgstr "Quarkus gRPCは link:https://vertx.io/docs/vertx-grpc/java/[Vert.x gRPC]
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:28
-#, fuzzy
 msgid "xref:grpc-getting-started.adoc[Getting Started]"
 msgstr "link:grpc-getting-started.html[はじめに]"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:29
-#, fuzzy
 msgid "xref:grpc-service-implementation.adoc[Implementing a gRPC Service]"
 msgstr "link:grpc-service-implementation.html[gRPCサービスの実装]"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:29
-#, fuzzy
 msgid "xref:grpc-service-consumption.adoc[Consuming a gRPC Service]"
-msgstr "link:grpc-service-consumption.html[gRPCサービスを利用する]"
+msgstr "link:grpc-service-consumption.html[gRPCサービスの利用]"
 
 #~ msgid "Quarkus gRPC"
 #~ msgstr "Quarkus gRPC"
