--- a/l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po
@@ -3,24 +3,23 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-22 15:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-08 00:01+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:3
-#, fuzzy
 msgid "icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime"
-msgstr "[<span class=\"icon\">ロック]</span>ビルド時に固定される設定プロパティ - その他の設定プロパティはランタイムでオーバーライド可能です。"
+msgstr "icon:lock[title=ビルド時に固定] ビルド時に固定される設定プロパティ - その他の設定プロパティはランタイムでオーバーライド可能です。"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:8
@@ -30,13 +29,13 @@ msgstr "link:[, id=quarkus-kogito-dev-services-build-time-config_configuration] 
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:9
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Type"
-msgstr "タイプ"
+msgstr "型"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:11
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Default"
 msgstr "デフォルト"
 
@@ -55,16 +54,16 @@ msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:17
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "boolean"
-msgstr "ブーリアン"
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:20
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "true"
-msgstr "真"
+msgstr "true"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:25
@@ -81,9 +80,9 @@ msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:26
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:52
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "string"
-msgstr "ストリング"
+msgstr "string"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:29
@@ -106,13 +105,13 @@ msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "int"
 msgstr "int"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:38
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "8180"
 msgstr "8180"
 
@@ -142,6 +141,6 @@ msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:54
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "kogito-data-index"
 msgstr "kogito-data-index"
