--- a/l10n/po/ja_JP/_guides/quarkus-runtime-base-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/quarkus-runtime-base-image.adoc.po
@@ -3,69 +3,63 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-08 00:05+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/quarkus-runtime-base-image.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus Base Runtime Image"
-msgstr "Quarkus Base Runtime Image"
+msgstr "Quarkusベースランタイムイメージ"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:12
-#, fuzzy
 msgid "To ease the containerization of native executables, Quarkus provides a base image providing the requirements to run these executables.  The `quarkus-micro-image:1.0` image is:"
-msgstr "ネイティブ実行可能ファイルのコンテナ化を容易にするために、Quarkusはこれらの実行ファイルを実行するための要件を提供するベースイメージを提供しています。 `quarkus-micro-image:1.0` のイメージです。"
+msgstr "ネイティブ実行可能ファイルのコンテナ化を容易にするために、Quarkusはこれらの実行ファイルを実行するための要件を提供するベースイメージを提供しています。 `quarkus-micro-image:1.0` のイメージは:"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:14
-#, fuzzy
 msgid "small (based on `ubi8-micro`)"
-msgstr "小型 （ `ubi8-micro` に基づく）"
+msgstr "小型 （ `ubi8-micro` に基づきます）"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:15
-#, fuzzy
 msgid "designed for containers"
-msgstr "コンテナ用デザイン"
+msgstr "コンテナ向けデザイン"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:16
-#, fuzzy
 msgid "contains the right set of dependencies (glibc, libstdc++, zlib)"
-msgstr "正しい依存関係のセット（glibc, libstdc++, zlib）が含まれていること。"
+msgstr "正しい依存関係のセット（glibc, libstdc++, zlib）が含まれている"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:17
-#, fuzzy
 msgid "support upx-compressed executables (more details on the xref:upx.adoc[enabling compression documentation])"
-msgstr "upxで圧縮された実行ファイルのサポート（詳細は link:upx.html[圧縮を有効にするためのドキュメント]を参照してください。）"
+msgstr "upxで圧縮された実行ファイルのサポート（詳細は link:upx.html[圧縮の有効化についてのドキュメント]を参照してください）"
 
 #. type: Title ==
 #: upstream/_guides/quarkus-runtime-base-image.adoc:18
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using the base image"
 msgstr "ベースイメージの利用"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:21
-#, fuzzy
 msgid "In your `Dockerfile`, just use:"
-msgstr "`Dockerfile` の中では、ただ"
+msgstr "`Dockerfile` の中で単に以下を使用します:"
 
 #. type: delimited block -
 #: upstream/_guides/quarkus-runtime-base-image.adoc:30
@@ -81,7 +75,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/quarkus-runtime-base-image.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Extending the image"
 msgstr "イメージの拡張"
 
@@ -201,9 +195,9 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/quarkus-runtime-base-image.adoc:104
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Alternative - Using ubi-minimal"
-msgstr "代替案 - ubi-minimalの使用"
+msgstr "代替 - ubi-minimalの使用"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-runtime-base-image.adoc:109
