Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kotlin.adoc.po
@@ -775,7 +775,7 @@ msgstr "Comments"
 #: upstream/_versions/main/guides/kotlin.adoc:408
 #, no-wrap
 msgid "`quarkus-resteasy-reactive`"
-msgstr ""
+msgstr "`quarkus-resteasy-reactive`"
 
 #. type: Table
 #: upstream/_versions/main/guides/kotlin.adoc:410
@@ -787,7 +787,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kotlin.adoc:411
 #, no-wrap
 msgid "`quarkus-rest-client-reactive`"
-msgstr ""
+msgstr "`quarkus-rest-client-reactive`"
 
 #. type: Table
 #: upstream/_versions/main/guides/kotlin.adoc:413
