Update language navigations localizations

--- a/l10n/po/ja_JP/_includes/header-navigation.html.po
+++ b/l10n/po/ja_JP/_includes/header-navigation.html.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-07 17:15+0000\n"
-"PO-Revision-Date: 2021-12-04 00:15+0900\n"
+"PO-Revision-Date: 2022-05-08 11:22+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Content of: <div><div><div>
 #: upstream/_includes/header-navigation.html:4
@@ -99,9 +99,8 @@ msgstr "<a href=\"{{site.baseurl}}/books\" class=\"{% if page.url contains '/boo
 
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:35
-#, fuzzy
 msgid "<span href=\"{{site.baseurl}}/community/\">Community <i class=\"fas fa-chevron-down\"></i></span>"
-msgstr "<span href=\"{{site.baseurl}}/learn/\">コミュニティ<i class=\"fas fa-chevron-down\"></i></span>"
+msgstr "<span href=\"{{site.baseurl}}/community/\">コミュニティ <i class=\"fas fa-chevron-down\"></i></span>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:37
@@ -150,24 +149,20 @@ msgstr "<a href=\"https://code.quarkus.io\" class=\"button-cta secondary white\"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><span>
 #: upstream/_includes/header-navigation.html:51
-#, fuzzy
 msgid "<span href=\"{{site.baseurl}}/language/\">"
-msgstr "<a href=\"{{site.baseurl}}/\">"
+msgstr "<span href=\"{{site.baseurl}}/language/\">"
 
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:51
-#, fuzzy
 msgid "<i class=\"fas fa-chevron-down\"></i></span>"
-msgstr "<span href=\"{{site.baseurl}}/about/\">Quarkusとは <i class=\"fas fa-chevron-down\"></i></span>"
+msgstr "<i class=\"fas fa-chevron-down\"></i></span>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:53
-#, fuzzy
 msgid "<a href=\"https://quarkus.io/\" >ENGLISH</a>"
-msgstr "<a href=\"https://quarkus.io/\" >ENGLISH</a>."
+msgstr "<a href=\"https://quarkus.io/\" >ENGLISH</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:54
-#, fuzzy
 msgid "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>"
-msgstr "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>。"
+msgstr "<a href=\"https://ja.quarkus.io/\">JAPANESE</a>"
