--- a/l10n/po/ja_JP/_includes/homepage-hero-band-ssjprime.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-hero-band-ssjprime.html.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-02 21:17+0000\n"
-"PO-Revision-Date: 2022-02-04 15:10+0900\n"
+"PO-Revision-Date: 2022-05-08 12:10+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja_JP\n"
@@ -54,9 +54,8 @@ msgstr "<a href=\"{{ site.data.versions.quarkus.announce }}\">リリースノー
 
 #. type: Content of: <div><div>
 #: upstream/_includes/homepage-hero-band-ssjprime.html:13
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/get-started/\" class=\"button-cta\">Get Started with Quarkus</a> <a href=\"{{site.baseurl}}/guides/\" class=\"button-cta\">Read the Guides</a>"
-msgstr "<a href=\"{{site.baseurl}}/get-started/\" class=\"button-cta\">Quarkus入門</a>"
+msgstr "<a href=\"{{site.baseurl}}/get-started/\" class=\"button-cta\">Quarkus入門</a> <a href=\"{{site.baseurl}}/guides/\" class=\"button-cta\">ガイドを読む</a>"
 
 #. type: Content of: <div><div>
 #: upstream/_includes/homepage-hero-band-ssjprime.html:17
