Apply translation memory

--- a/l10n/po/ja_JP/_versions/2.2/guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/cassandra.adoc.po
@@ -973,7 +973,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/cassandra.adoc:572
 #, no-wrap
 msgid "Health Checks"
-msgstr ""
+msgstr "ヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/cassandra.adoc:578
@@ -1236,7 +1236,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/cassandra.adoc:741
 #, no-wrap
 msgid "Running in native mode"
-msgstr ""
+msgstr "ネイティブモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/cassandra.adoc:745
