--- a/l10n/po/ja_JP/_versions/2.2/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/kafka.adoc.po
@@ -2377,7 +2377,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/kafka.adoc:1285
 #, no-wrap
 msgid "Health Checks"
-msgstr ""
+msgstr "ヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/kafka.adoc:1289
