--- a/l10n/po/ja_JP/_versions/2.7/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/elasticsearch.adoc.po
@@ -842,7 +842,7 @@ msgstr "ネイティブ実行可能ファイルで両方のクライアントを
 #. type: Plain text
 #: upstream/_versions/2.7/guides/elasticsearch.adoc:485
 msgid "You can build a native executable with the usual command:"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルは、通常のコマンド `./mvnw package -Pnative` でビルドできます。"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/elasticsearch.adoc:489
