--- a/l10n/po/ja_JP/_versions/2.7/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/kafka.adoc.po
@@ -2684,7 +2684,7 @@ msgstr ""
 #: upstream/_versions/2.7/guides/kafka.adoc:1484
 #, no-wrap
 msgid "Health Checks"
-msgstr ""
+msgstr "ヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/kafka.adoc:1488
