--- a/l10n/po/ja_JP/_versions/2.7/guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/rest-client-reactive.adoc.po
@@ -377,7 +377,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.7/guides/rest-client-reactive.adoc:202
 msgid "Create the `src/main/java/org/acme/rest/client/ExtensionsResource.java` file with the following content:"
-msgstr ""
+msgstr "`src/main/java/org/acme/rest/client/ExtensionsResource.java` ファイルを以下の内容で作成してください:"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/rest-client-reactive.adoc:210
