--- a/l10n/po/ja_JP/_versions/2.7/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/rest-json.adoc.po
@@ -232,7 +232,7 @@ msgstr "派手なことは何もありません。注意すべき重要なこと
 #. type: Plain text
 #: upstream/_versions/2.7/guides/rest-json.adoc:118
 msgid "Now, create the `org.acme.rest.json.FruitResource` class as follows:"
-msgstr ""
+msgstr "ここで、 `org.acme.rest.json.FruitResource` クラスを以下のように編集します:"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/rest-json.adoc:126
@@ -606,7 +606,7 @@ msgstr "ネイティブ実行可能ファイルの構築"
 #. type: Plain text
 #: upstream/_versions/2.7/guides/rest-json.adoc:323
 msgid "You can build a native executable with the usual command:"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルは、通常のコマンド `./mvnw package -Pnative` でビルドできます。"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/rest-json.adoc:327
