--- a/l10n/po/ja_JP/_versions/2.7/guides/scripting.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/scripting.adoc.po
@@ -44,7 +44,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_versions/2.7/guides/scripting.adoc:23
 msgid "https://jbang.dev/download[JBang]"
-msgstr ""
+msgstr "https://jbang.dev/download[JBang]"
 
 #. type: Title ==
 #: upstream/_versions/2.7/guides/scripting.adoc:24
@@ -189,7 +189,7 @@ msgstr "初期ファイルの作成"
 #. type: Plain text
 #: upstream/_versions/2.7/guides/scripting.adoc:87
 msgid "First, we need a Java file. JBang lets you create an initial version using:"
-msgstr ""
+msgstr "まず、Javaファイルが必要です。jbangを使うと次のように初期バージョンを作成できます:"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/scripting.adoc:92
@@ -212,7 +212,7 @@ msgstr "この初期バージョンは、実行すると `Hello World` が表示
 #. type: Plain text
 #: upstream/_versions/2.7/guides/scripting.adoc:99
 msgid "Once generated, look at the `quarkusapp.java` file."
-msgstr ""
+msgstr "生成されたら、 `quarkusapp.java` ファイルを見てみましょう。"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/scripting.adoc:101
@@ -617,7 +617,7 @@ msgstr "ロギング"
 #. type: Plain text
 #: upstream/_versions/2.7/guides/scripting.adoc:362
 msgid "To use logging in Quarkus scripting with JBang you do as usual, with configuring a logger, i.e."
-msgstr ""
+msgstr "jbangによるQuarkusスクリプトでロギングを使用するには、通常通りロガーを設定します。"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/scripting.adoc:366
@@ -686,7 +686,7 @@ msgstr "`native-image` バイナリーがインストールされていて `GRAA
 #: upstream/_versions/2.7/guides/scripting.adoc:399
 #, no-wrap
 msgid "$ jbang --native quarkusapp.java\n"
-msgstr ""
+msgstr "$ jbang --native quarkusapp.java\n"
 
 #. type: delimited block -
 #: upstream/_versions/2.7/guides/scripting.adoc:412
