--- a/l10n/po/ja_JP/_versions/main/guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cassandra.adoc.po
@@ -938,7 +938,7 @@ msgstr ""
 #: upstream/_versions/main/guides/cassandra.adoc:556
 #, no-wrap
 msgid "Health Checks"
-msgstr ""
+msgstr "ヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/cassandra.adoc:562
@@ -1173,7 +1173,7 @@ msgstr ""
 #: upstream/_versions/main/guides/cassandra.adoc:705
 #, no-wrap
 msgid "Running in native mode"
-msgstr ""
+msgstr "ネイティブモードでの実行"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/cassandra.adoc:709
