--- a/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
@@ -3050,7 +3050,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka.adoc:1647
 #, no-wrap
 msgid "Health Checks"
-msgstr ""
+msgstr "ヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka.adoc:1651
