--- a/l10n/po/ja_JP/_versions/main/guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-client-multipart.adoc.po
@@ -33,7 +33,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/rest-client-multipart.adoc:17
 msgid "It is now recommended to use RESTEasy Reactive, which supports equally well traditional blocking workloads and reactive workloads.  For more information about RESTEasy Reactive, please see the xref:rest-client-reactive.adoc[REST Client Reactive guide] and, for the server side, the xref:rest-json.adoc[introductory REST JSON guide] or the more detailed xref:resteasy-reactive.adoc[RESTEasy Reactive guide]."
-msgstr ""
+msgstr "現在では、従来のブロック型ワークロードとリアクティブ型ワークロードを同様にサポートするRESTEasy Reactiveの使用が推奨されています。RESTEasy Reactiveの詳細については、 link:rest-client-reactive.html[REST Client Reactiveガイド]、サーバーサイドについては、 link:rest-json.html[REST JSON入門ガイド]、またはより詳細な link:resteasy-reactive.html[RESTEasy Reactiveガイド]を参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-client-multipart.adoc:20
