--- a/l10n/po/ja_JP/_versions/main/guides/resteasy.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy.adoc.po
@@ -205,7 +205,7 @@ msgstr "派手なことは何もありません。注意すべき重要なこと
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy.adoc:110
 msgid "Now, create the `org.acme.rest.json.FruitResource` class as follows:"
-msgstr ""
+msgstr "ここで、 `org.acme.rest.json.FruitResource` クラスを以下のように編集します:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/resteasy.adoc:118
@@ -579,7 +579,7 @@ msgstr "ネイティブ実行可能ファイルの構築"
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy.adoc:315
 msgid "You can build a native executable with the usual command:"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルは、通常のコマンド `./mvnw package -Pnative` でビルドできます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy.adoc:319
