--- a/l10n/po/ja_JP/_versions/main/guides/scripting.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/scripting.adoc.po
@@ -44,7 +44,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_versions/main/guides/scripting.adoc:23
 msgid "https://jbang.dev/download[JBang]"
-msgstr ""
+msgstr "https://jbang.dev/download[JBang]"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/scripting.adoc:24
