--- a/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
@@ -874,7 +874,7 @@ msgstr "ネイティブ実行可能ファイルで両方のクライアントを
 #. type: Plain text
 #: upstream/_versions/main/guides/elasticsearch.adoc:499
 msgid "You can build a native executable with the usual command:"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルは、通常のコマンド `./mvnw package -Pnative` でビルドできます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/elasticsearch.adoc:503
