Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-10 02:31+0000\n"
+"POT-Creation-Date: 2022-05-11 02:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18650,7 +18650,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Whether or not this service is cluster-local. Cluster local services are not exposed to the outside world.\n"
+"Whether or not this service is cluster-local. Cluster local services are not exposed to the outside world. More information in link:https://knative.dev/docs/serving/services/private-services/[this link].\n"
 "--"
 msgstr ""
 
