Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-core-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-core-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-12 10:09+0000\n"
+"POT-Creation-Date: 2022-05-11 10:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -791,7 +791,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-core-general-config-items.adoc:362
 #: upstream/_generated-config/latest/config/quarkus-core-general-config-items.adoc:721
 #, no-wrap
-msgid "`10`"
+msgid "`10M`"
 msgstr ""
 
 #. type: Table
@@ -810,7 +810,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-core-general-config-items.adoc:371
 #: upstream/_generated-config/latest/config/quarkus-core-general-config-items.adoc:730
 #, no-wrap
-msgid "`1`"
+msgid "`5`"
 msgstr ""
 
 #. type: Table
