--- a/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-05-11 10:12+0000\n"
 "PO-Revision-Date: 2021-04-09 20:10+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -830,7 +830,7 @@ msgstr "追加リソース"
 #. type: Plain text
 #: upstream/_guides/smallrye-fault-tolerance.adoc:504
 #, fuzzy
-msgid "SmallRye Fault Tolerance has more features than shown here.  Please check the link:https://smallrye.io/docs/smallrye-fault-tolerance/5.3.1/index.html[SmallRye Fault Tolerance documentation] to learn about them."
+msgid "SmallRye Fault Tolerance has more features than shown here.  Please check the link:https://smallrye.io/docs/smallrye-fault-tolerance/5.4.0/index.html[SmallRye Fault Tolerance documentation] to learn about them."
 msgstr "SmallRye Fault Toleranceには、ここで紹介した以外にも様々な機能があります。それらについては、 link:https://smallrye.io/docs/smallrye-fault-tolerance/5.2.0/index.html[SmallRye Fault Toleranceのドキュメント]をご確認ください。"
 
 #. type: Plain text
@@ -882,10 +882,15 @@ msgid "smallrye.faulttolerance.mp-compatibility=true\n"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_guides/smallrye-fault-tolerance.adoc:536
+#: upstream/_guides/smallrye-fault-tolerance.adoc:537
 #, fuzzy
-msgid "The link:https://smallrye.io/docs/smallrye-fault-tolerance/5.3.1/usage/programmatic-api.html[programmatic API] is present, including Mutiny support, and integrated with the declarative, annotation-based API.  You can use the `FaultTolerance` and `MutinyFaultTolerance` APIs out of the box."
+msgid "The link:https://smallrye.io/docs/smallrye-fault-tolerance/5.4.0/usage/programmatic-api.html[programmatic API] is present, including Mutiny support, and integrated with the declarative, annotation-based API.  You can use the `FaultTolerance` and `MutinyFaultTolerance` APIs out of the box."
 msgstr "Mutinyのサポートを含む link:https://smallrye.io/docs/smallrye-fault-tolerance/5.3.1/usage/programmatic-api.html[プログラム的なAPIが]存在し、宣言的でアノテーションベースのAPIと統合されています。 `FaultTolerance` と `MutinyFaultTolerance` の API をすぐに使うことができます。"
+
+#. type: delimited block =
+#: upstream/_guides/smallrye-fault-tolerance.adoc:538
+msgid "Support for Kotlin is present (assuming you use the Quarkus extension for Kotlin), so you can guard your `suspend` functions with fault tolerance annotations."
+msgstr ""
 
 #~ msgid "To complete this guide, you need:"
 #~ msgstr "このガイドを完成させるには、以下が必要です:"
