--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-05-06 18:13+0000\n"
+"POT-Creation-Date: 2022-05-11 10:12+0000\n"
 "PO-Revision-Date: 2022-05-06 11:09+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -3973,7 +3973,7 @@ msgstr ""
 msgid ""
 "    @RegisterExtension\n"
 "    final static QuarkusDevModeTest test = new QuarkusDevModeTest()\n"
-"            .setArchiveProducer(new Supplier<JavaArchive>() {\n"
+"            .setArchiveProducer(new Supplier<>() {\n"
 "                @Override\n"
 "                public JavaArchive get() {\n"
 "                    return ShrinkWrap.create(JavaArchive.class)   <1>\n"
@@ -4454,7 +4454,9 @@ msgstr "サンプルテストエクステンション"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:2219
-msgid "We have an extension that is used to test for regressions in the extension processing. It is located in {quarkus-tree-url}/core/test-extension directory. In this section we touch on some of the tasks an extension author will typically need to perform using the test-extension code to illustrate how the task could be done."
+#, fuzzy
+#| msgid "We have an extension that is used to test for regressions in the extension processing. It is located in {quarkus-tree-url}/core/test-extension directory. In this section we touch on some of the tasks an extension author will typically need to perform using the test-extension code to illustrate how the task could be done."
+msgid "We have an extension that is used to test for regressions in the extension processing. It is located in {quarkus-tree-url}/integration-tests/test-extension/extension directory. In this section we touch on some of the tasks an extension author will typically need to perform using the test-extension code to illustrate how the task could be done."
 msgstr "エクステンションの処理のリグレッションをテストするために使われるエクステンションがあります。これは {quarkus-tre-url}/core/test-extension ディレクトリにあります。このセクションでは、test-extension のコードを使って、エクステンションの作者が通常行う必要のあるタスクについて触れます。"
 
 #. type: Title ====
@@ -5127,7 +5129,7 @@ msgstr "ランタイムレコーダーは、サービスインスタンス `stop
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:2542
 #, fuzzy
-msgid "The code for the `RuntimeXmlConfigService` can be viewed here: {quarkus-blob-url}/core/test-extension/runtime/src/main/java/io/quarkus/extest/runtime/RuntimeXmlConfigService.java[RuntimeXmlConfigService.java]"
+msgid "The code for the `RuntimeXmlConfigService` can be viewed here: {quarkus-blob-url}/integration-tests/test-extension/extension/runtime/src/main/java/io/quarkus/extest/runtime/RuntimeXmlConfigService.java[RuntimeXmlConfigService.java]"
 msgstr "`RuntimeXmlConfigService` のコードはここで見ることができます。{quarkus-blob-url}/core/test-extension/runtime/src/main/java/io/quarkus/extest/runtime/RuntimeXmlConfigService.java[RuntimeXmlConfigService.java]をご覧ください。"
 
 #. type: Plain text
@@ -6188,7 +6190,7 @@ msgstr "`name`"
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3129
 #, fuzzy
-msgid "`description` (unless you have it already set in the ``runtime/pom.xml``'s `<description>` element, which is the recommended approach)"
+msgid "`description` (unless you have it already set in the `runtime/pom.xml`'s `<description>` element, which is the recommended approach)"
 msgstr "`description` (推奨されるアプローチである、 `runtime/pom.xml` の `<description>` 要素にセット、がされていない限り)"
 
 #. type: Plain text
