--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-oidc-tenant-config-authentication.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-oidc-tenant-config-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-19 17:16+0000\n"
+"POT-Creation-Date: 2022-05-11 10:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -369,7 +369,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Requires that ID token is available when the authorization code flow completes. Disable this property only when you need to use the authorization code flow with OAuth2 providers which do not return ID token.\n"
+"Requires that ID token is available when the authorization code flow completes. Disable this property only when you need to use the authorization code flow with OAuth2 providers which do not return ID token - an internal IdToken will be generated in such cases.\n"
 "--"
 msgstr ""
 
@@ -640,7 +640,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Requires that ID token is available when the authorization code flow completes. Disable this property only when you need to use the authorization code flow with OAuth2 providers which do not return ID token.\n"
+"Requires that ID token is available when the authorization code flow completes. Disable this property only when you need to use the authorization code flow with OAuth2 providers which do not return ID token - an internal IdToken will be generated in such cases.\n"
 "--"
 msgstr ""
 
