--- a/l10n/po/ja_JP/_guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-05-11 10:12+0000\n"
 "PO-Revision-Date: 2022-05-08 11:48+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1117,13 +1117,103 @@ msgid ""
 "ReactiveRedisClient namedReactiveRedisClient = ReactiveRedisClient.createClient(\"second\");\n"
 msgstr ""
 
+#. type: Title ==
+#: upstream/_guides/redis.adoc:623
+#, no-wrap
+msgid "Working with Binary Data"
+msgstr ""
+
 #. type: Plain text
-#: upstream/_guides/redis.adoc:624
+#: upstream/_guides/redis.adoc:630
+msgid "While `RedisClient` and `ReactiveRedisClient` expose convenient `String`-based methods that mirror the commands available in Redis, they do not handle binary data.  In order to store binary data in Redis, you can inject an instance of the lower-level `MutinyRedis` class:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/redis.adoc:639
+#, no-wrap
+msgid ""
+"import io.quarkus.redis.client.runtime.MutinyRedis;\n"
+"import io.vertx.mutiny.redis.client.Command;\n"
+"import io.vertx.mutiny.redis.client.Request;\n"
+"import io.vertx.mutiny.redis.client.Response;\n"
+"import javax.enterprise.context.ApplicationScoped;\n"
+"import javax.inject.Inject;\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/redis.adoc:642
+#, no-wrap
+msgid ""
+"@ApplicationScoped\n"
+"class BinaryCacheService {\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/redis.adoc:645
+#, no-wrap
+msgid ""
+"    @Inject\n"
+"    MutinyRedis mutinyRedis; // <1>\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/redis.adoc:654
+#, no-wrap
+msgid ""
+"    Uni<Void> set(String key, byte[] data) {\n"
+"        return mutinyRedis\n"
+"            .send( // <2>\n"
+"                Request.cmd(Command.SET)\n"
+"                    .arg(key)\n"
+"                    .arg(data)) // <3>\n"
+"            .replaceWithVoid();\n"
+"    }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/redis.adoc:664
+#, no-wrap
+msgid ""
+"    Uni<byte[]> get(String key) {\n"
+"        return mutinyRedis\n"
+"            .send(\n"
+"                Request.cmd(Command.GET)\n"
+"                    .arg(key))\n"
+"            .ifNotNull()\n"
+"            .transform(Response::toBytes); // <4>\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/redis.adoc:666
+#, fuzzy
+#| msgid "Inject the Reactive Redis client"
+msgid "Inject the `MutinyRedis` instance"
+msgstr "Reactive Redisクライアントを注入する"
+
+#. type: Plain text
+#: upstream/_guides/redis.adoc:667
+msgid "Use the https://smallrye.io/smallrye-mutiny-vertx-bindings/2.20.0/apidocs/io/vertx/mutiny/redis/client/Redis.html#send(io.vertx.mutiny.redis.client.Request)[`send`] method to send a command"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/redis.adoc:668
+msgid "`Request#arg` has overloads to support various types including `byte[]`"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/redis.adoc:669
+msgid "Convert a bulk response into a byte array"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/redis.adoc:671
 msgid "Please see also <<redis-reference.adoc#custom_redis_commands,How to use custom Redis Commands>>."
 msgstr "link:redis-reference.html#custom_redis_commands[Redisのカスタムコマンドの使い方]もご参照ください。"
 
 #. type: Title ==
-#: upstream/_guides/redis.adoc:626
+#: upstream/_guides/redis.adoc:673
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
