Apply translation memory

--- a/l10n/po/ja_JP/_guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/kotlin.adoc.po
@@ -741,7 +741,7 @@ msgstr ""
 #: upstream/_guides/kotlin.adoc:400
 #, no-wrap
 msgid "Extensions"
-msgstr ""
+msgstr "エクステンション"
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:403
@@ -758,13 +758,13 @@ msgstr ""
 #: upstream/_guides/kotlin.adoc:407
 #, no-wrap
 msgid "Comments"
-msgstr ""
+msgstr "Comments"
 
 #. type: Table
 #: upstream/_guides/kotlin.adoc:408
 #, no-wrap
 msgid "`quarkus-resteasy-reactive`"
-msgstr ""
+msgstr "`quarkus-resteasy-reactive`"
 
 #. type: Table
 #: upstream/_guides/kotlin.adoc:410
@@ -776,7 +776,7 @@ msgstr ""
 #: upstream/_guides/kotlin.adoc:411
 #, no-wrap
 msgid "`quarkus-rest-client-reactive`"
-msgstr ""
+msgstr "`quarkus-rest-client-reactive`"
 
 #. type: Table
 #: upstream/_guides/kotlin.adoc:413
