--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc.po
@@ -19,7 +19,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc:3
 msgid "icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime"
-msgstr ""
+msgstr "icon:lock[title=ビルド時に固定] ビルド時に固定される設定プロパティ - その他の設定プロパティはランタイムでオーバーライド可能です。"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc:8
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc:16
@@ -55,7 +55,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc:17
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc:20
@@ -115,4 +115,4 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-filter-config.adoc:44
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
