--- a/l10n/po/ja_JP/_guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/container-image.adoc.po
@@ -241,7 +241,7 @@ msgstr "プロジェクト用のコンテナーイメージを作成するには
 #: upstream/_guides/container-image.adoc:131
 #, no-wrap
 msgid "Maven"
-msgstr ""
+msgstr "Maven"
 
 #. type: delimited block -
 #: upstream/_guides/container-image.adoc:134
@@ -254,7 +254,7 @@ msgstr "./mvnw clean package -Dquarkus.container-image.build=true\n"
 #: upstream/_guides/container-image.adoc:136
 #, no-wrap
 msgid "Gradle"
-msgstr ""
+msgstr "Gradle"
 
 #. type: delimited block -
 #: upstream/_guides/container-image.adoc:139
