--- a/l10n/po/ja_JP/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
 #, no-wrap
 msgid "gsmet"
-msgstr ""
+msgstr "gsmet"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
@@ -32,7 +32,7 @@ msgstr ""
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
 #, no-wrap
 msgid "post"
-msgstr ""
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
@@ -44,7 +44,7 @@ msgstr ""
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
 #, no-wrap
 msgid "release"
-msgstr ""
+msgstr "release"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
@@ -95,7 +95,7 @@ msgstr ""
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:20
 #, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:23
@@ -106,7 +106,7 @@ msgstr ""
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:24
 #, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:31
@@ -300,7 +300,7 @@ msgstr ""
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:111
 #, no-wrap
 msgid "Contributors"
-msgstr ""
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:115
@@ -316,34 +316,34 @@ msgstr ""
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:118
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:121
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:123
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:125
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:126
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:127
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:127
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
